fix menu sizing on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -64,8 +64,10 @@ body {
 
 /* bootstrap 3 helpers */
 
-.navbar-nav {
-  height: 60px;
+@include MQ(M) {
+  .navbar-nav {
+    height: 60px;
+  }
 }
 
 .navbar-form input,
